--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -24,6 +24,27 @@ footer{
     
 }
 
+a{
+    text-decoration: dashed;
+    text-transform: capitalize;
+}
+
+input{
+    outline: none;
+}
+
+button{
+    display: flex;
+    flex-direction: row;
+    margin-top: 3px;
+    width: 50%;
+    justify-content: center;
+    background-color: transparent;
+    border: 1px solid #919191;
+    padding: 3px;
+    border-radius: 3px;
+}
+
 .welcomeIndex p{
     margin-top: 3%;
 }
@@ -47,7 +68,6 @@ footer{
     padding: 5px 10px 5px 10px;
 }
 
-
 .adImage {
     width: 20%;
     height: 20%;
@@ -68,7 +88,7 @@ footer{
 }
 
 .mainFormFields{
-    width: 300px;
+    width: 240px;
     background: #fff;
 }
 
@@ -84,26 +104,10 @@ footer{
     border-radius: 3px;
 } */
 
-button{
-    display: flex;
-    flex-direction: row;
-    margin-top: 3px;
-    width: 57%;
-    justify-content: center;
-    background-color: transparent;
-    border: 1px solid #919191;
-    padding: 3px;
-    border-radius: 3px;
-}
 
 .mainFormFields input{
     margin-top: 3px;
     border-radius: 4px;
     border: 1px solid #ccc;
     padding: 3px;
-}
-
-a{
-    text-decoration: dashed;
-    text-transform: capitalize;
 }
